# vibec

./: .gitignore  README.md  pyproject.toml
examples/: closures.ox  collections.ox  comprehensions.vb  constants.ox  counter  counter.vb  enums.ox  factorial.ox  fibonacci.ox  generics.ox  generics.vb  hashmaps.ox  hello.ox  impl.ox  iterators.ox  kwargs.vb  loops.ox  operator_overloading.ox  references.ox  results.ox  slices.ox  strings.ox  structs.vb  tuples.ox  type_aliases.vb
src/oxide/: __init__.py  ast.py  checker.py  cli.py  codegen.py  compiler.py  lexer.py  parser.py  tokens.py
src/vibec/: __init__.py  ast.py  checker.py  codegen.py  compiler.py  lexer.py  parser.py  tokens.py
tests/: test_compiler.py
