[project]
name = "oxide"
version = "0.1.0"
description = "A Python/Rust hybrid language compiler for ARM64 macOS"
readme = "README.md"
authors = [
    { name = "Marko Elez", email = "markoelez7@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
oxide = "oxide:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "ty>=0.0.1a7",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ty.environment]
python-version = "3.12"
root = ["src"]
